--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.24.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-action-button": "^2.8.5",
     "react-native-ionicons": "^4.5.5",
     "react-native-vector-icons": "^6.4.1"
   },
