--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
     "react-native-ionicons": "^4.5.5",
+    "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^6.4.1"
   },
   "devDependencies": {
