--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --lan ",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject"
@@ -15,7 +15,8 @@
     "react-native-action-button": "^2.8.5",
     "react-native-ionicons": "^4.5.5",
     "react-native-swipeable": "^0.6.0",
-    "react-native-vector-icons": "^6.4.1"
+    "react-native-vector-icons": "^6.4.1",
+    "react-navigation": "^3.9.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
